public/css/styles.css
/* COLORS */

.light {
  color: #f1e7de;
}

.light-bg {
  background-color: #f1e7de;
}

.dark {
  color: #343d3a;
}

.dark-bg {
  background-color: #343d3a;
}

.orange {
  color: #efa93a;
}

.orange-bg {
  background-color: #efa93a;
}

body {
  margin: 0;
}

.section {
  display: flex;
  flex-direction: column;
  align-items: center;
  font-family: "inter", serif;
  height: 100vh;
  min-height: 700px;
  padding: 5% 5% 5% 5%;
}

.section.two {
  min-height: 800px;
}

.section.three {
  min-height: 1100px;
}

.circle {
  border-radius: 50%;
}

.hero-image-section {
  border-radius: 50%;
  display: flex;
  flex-direction: row;
  height: 20vh;
  justify-content: center;
  /* justify-self: stretch; */
  min-height: 130px;
  overflow: hidden;
  width: 20vh;
  max-width: 300px;
}

h1, h2 {
  font-size: 1.6rem;
  font-weight: 800;
  margin: 30px 0 20px;
  /* width: 80vw; */
}

.paragraph-style-1 {
  font-size: 1.2rem;
  font-weight: 600;
  margin: 0;
  margin-bottom: 10px;
  width: 80vw;
}

.list {
  font-size: 1rem;
  margin-top: 5px;
  /* width: 80vw; */
}

.list-item {
  padding-top: 0;
  padding-bottom: 8px;
}

.cta {
  display: flex;
  flex: 1;
  flex-direction: column;
  align-content: center;
  justify-content: center;
  text-align: center;
  width: 80vw;
}

.cta-text {
  margin: 12px;
}

.font-1-5 {
  font-size: 1.3rem;
}

.button {
  border: 3px solid #343d3a;
  border-radius: 10px;
  font-size: 1.2rem;
  font-weight: 900;
  margin-bottom: 12px;
  text-decoration: none;
  /* margin-top: 10px; */
}

.form-container {
  border: 3px solid #343d3a;
  border-radius: 10px;
  padding: 3vw;
}

form {
  align-items: stretch;
  display: flex;
  flex-direction: column;
}

.form-input {
  border: 1px solid #343d3a;
  border-radius: 5px;
  height: 40px;
  padding: 0 20px;
  margin-bottom: 12px;
}

.form-section {
  min-height: 900px;
}

.message {
  font-family: "inter", sans-serif;
  color: #343d3a;
  height: 200px;
  padding: 10px 20px;
  resize: none;
}

.list-section {
  flex: 1.5;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

